--- a/bankcard.html
+++ b/bankcard.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<title>Банковские карты</title>
+		<title>Одна карта</title>
 		<link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
 		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="css/style.css">
@@ -115,34 +115,63 @@
 									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 								</svg></a>
-							<h1 class="backtitle__text">Привязанные карты</h1><a class="backtitle__cross" href="home.html"> </a>
+							<h1 class="backtitle__text">Visa</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
-						<div class="bankcard__cards">
-							<div class="row gy">
-								<div class="bankcard__col"> <a class="bankcard__card" href="#"> 
-										<div class="bankcard__content"> 
-											<div class="bankcard__icon"> 
-												<svg width="46" height="30" viewBox="0 0 46 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<path d="M31.5 0.5C28.3 0.5 25.4 1.5 23 3.3C20.6 1.5 17.7 0.5 14.5 0.5C6.5 0.5 0 7 0 15C0 23 6.5 29.5 14.5 29.5C17.7 29.5 20.6 28.5 23 26.7C25.4 28.4 28.3 29.5 31.5 29.5C39.5 29.5 46 23 46 15C46 7 39.5 0.5 31.5 0.5ZM23 22.7C21.1 20.7 20 18 20 15C20 12 21.1 9.3 23 7.3C24.9 9.3 26 12 26 15C26 18 24.9 20.7 23 22.7ZM31.5 26.5C29.2 26.5 27.1 25.8 25.3 24.7C27.6 22.1 29 18.8 29 15C29 11.2 27.6 7.9 25.3 5.3C27.1 4.2 29.2 3.5 31.5 3.5C37.8 3.5 43 8.7 43 15C43 21.3 37.8 26.5 31.5 26.5Z" fill="#212629"></path>
+						<form class="bankcard__form" action="#"> 
+							<div class="row row--mb35">
+								<div class="bankcard__col bankcard__col--big">
+									<div class="input"> 
+										<div class="input__label">Номер карты</div>
+										<div class="input__input input__input--icon"> 
+											<input class="js-cardNum-mask" type="text">
+											<div class="input__icon"> 
+												<svg width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path d="M4.20039 0.5C2.40039 0.5 0.900391 2 0.900391 3.8V12.3C0.900391 14 2.40039 15.5 4.20039 15.5H19.7004C21.5004 15.5 23.0004 14 23.0004 12.2V3.8C22.9004 2 21.4004 0.5 19.7004 0.5H4.20039ZM4.20039 2H19.7004C20.7004 2 21.5004 2.8 21.5004 3.8V12.3C21.5004 13.3 20.7004 14.1 19.7004 14.1H4.20039C3.20039 14.1 2.40039 13.3 2.40039 12.3V3.8C2.40039 2.8 3.20039 2 4.20039 2ZM14.0004 5.3C12.5004 5.3 11.8004 6 11.8004 6.9C11.8004 8.6 13.7004 8.3 13.7004 9.2C13.7004 9.3 13.6004 9.7 12.8004 9.7C12.0004 9.7 11.5004 9.4 11.5004 9.4L11.3004 10.5C11.3004 10.5 11.8004 10.8 12.8004 10.8C13.8004 10.8 15.2004 10 15.2004 8.9C15.2004 7.6 13.3004 7.5 13.3004 6.9C13.3004 6.6 13.5004 6.4 14.2004 6.4C14.6004 6.4 15.2004 6.7 15.2004 6.7L15.3004 5.5C15.3004 5.5 14.6004 5.3 14.0004 5.3ZM9.20039 5.4H7.70039L6.50039 9.1C6.50039 9.1 6.40039 8.8 6.40039 8.6C5.70039 6.9 4.50039 6.3 4.50039 6.3L5.60039 10.5H7.10039L9.20039 5.4ZM9.80039 5.4L9.00039 10.6H10.4004L11.2004 5.4H9.80039ZM17.3004 5.4L15.0004 10.6H16.4004L16.7004 9.9H18.4004L18.5004 10.6H19.9004L18.8004 5.4H17.3004ZM2.90039 5.4C2.90039 5.4 5.60039 6.2 6.30039 8.3L5.80039 5.9C5.80039 5.9 5.60039 5.4 5.00039 5.4H2.90039ZM17.9004 6.9L18.3004 8.9H17.1004L17.9004 6.9Z" fill="#212629"></path>
 												</svg>
 											</div>
-											<div class="bankcard__title">**** 3456</div>
-										</div></a></div>
-								<div class="bankcard__col"> <a class="bankcard__card" href="#"> 
-										<div class="bankcard__content"> 
-											<div class="bankcard__icon"> 
-												<svg width="44" height="30" viewBox="0 0 44 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<path d="M6.5 0C2.9 0 0 2.9 0 6.5V23.5C0 27.1 2.9 30 6.5 30H37.5C41.1 30 44 27.1 44 23.5V6.5C44 2.9 41.1 0 37.5 0H6.5ZM6.5 3H37.5C39.5 3 41 4.5 41 6.5V23.5C41 25.5 39.5 27 37.5 27H6.5C4.5 27 3 25.5 3 23.5V6.5C3 4.5 4.5 3 6.5 3ZM26.2 9.5C23.3 9.5 21.8 10.9 21.8 12.8C21.8 16.1 25.6 15.7 25.6 17.4C25.6 17.7 25.4 18.4 23.8 18.4C22.2 18.4 21.1 17.8 21.1 17.8L20.6 20C20.6 20 21.6 20.6 23.6 20.6C25.6 20.6 28.3 19.1 28.3 16.8C28.3 14.1 24.4 13.9 24.4 12.8C24.4 12.2 24.9 11.7 26.3 11.7C27.2 11.7 28.2 12.4 28.2 12.4L28.6 10.1C28.8 10 27.4 9.5 26.2 9.5ZM16.7 9.7H13.7L11.2 17.1C11.2 17.1 11.1 16.5 11 16.1C9.6 12.9 7.2 11.7 7.2 11.7L9.4 20.2H12.5L16.7 9.7ZM17.8 9.7L16.2 20.2H19L20.7 9.7H17.8ZM32.8 9.7L28.2 20.2H31L31.6 18.7H35.1L35.4 20.2H37.9L35.8 9.7H32.8ZM4.1 9.7C4.1 9.7 9.6 11.4 10.8 15.5L9.9 10.8C9.9 10.8 9.5 9.8 8.4 9.8H4.1V9.7ZM33.9 12.7L34.7 16.7H32.4L33.9 12.7Z" fill="#212629"></path>
-												</svg>
-											</div>
-											<div class="bankcard__title">**** 8944</div>
-										</div></a></div>
+										</div>
+									</div>
+								</div>
+								<div class="bankcard__col bankcard__col--small mobile-hide">
+									<div class="input"> 
+										<div class="input__label">Действительна до</div>
+										<div class="input__input"> 
+											<input class="js-cardExpired-mask" type="text">
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="bankcard__btn"> 
-							<div class="btn btn--black">Добавить карту</div>
-						</div>
+							<div class="row row--mb35">
+								<div class="bankcard__col bankcard__col--big">
+									<div class="input"> 
+										<div class="input__label">Имя держателя карты</div>
+										<div class="input__input input__input--uppercase">
+											<input type="text" maxlength="50">
+										</div>
+									</div>
+								</div>
+								<div class="bankcard__col bankcard__col--small mobile-visible">
+									<div class="input"> 
+										<div class="input__label">Действительна до</div>
+										<div class="input__input"> 
+											<input class="js-cardExpired-mask" type="text">
+										</div>
+									</div>
+								</div>
+								<div class="bankcard__col bankcard__col--small">
+									<div class="input"> 
+										<div class="input__label">CVC2/CVV2</div>
+										<div class="input__input"> 
+											<input type="password" maxlength="3">
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="bankcard__btn"> 
+								<button class="btn btn--black" type="submit">Удалить карту</button>
+							</div>
+						</form>
 					</div>
 				</div>
 				<!--	/bankcard-->
@@ -203,6 +232,7 @@
 		</div>
 		<script src="js/libs/jquery.min.js"> </script>
 		<script src="js/libs/swiper-bundle.min.js"> </script>
+		<script src="js/libs/jquery.inputmask.min.js"> </script>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
