--- a/addresses.html
+++ b/addresses.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<title>Навигация по страницам</title>
+		<title>Банковские карты</title>
 		<link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
 		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 	<body> 
 		<div class="page"> 
 						<!-- header-->
-						<header class="header">
+						<header class="header mobile-hide">
 							<div class="wrapper">
 								<div class="header__burger hamburger hamburger--squeeze js-drop-btn" data-drop="mobile-menu">
 									<div class="hamburger-box">
@@ -105,26 +105,41 @@
 						</header>
 						<!--	/header-->
 			<main class="content"> 
-				<!-- navpage-->
-				<div class="navpage">
+				<!-- addresses-->
+				<div class="addresses">
 					<div class="wrapper">
-						<h1>Навигация по страницам</h1>
-						<ul> 
-							<li> <a href="home.html">Главная</a></li>
-							<li> <a href="agreement.html">Пользовательское соглашение</a></li>
-							<li> <a href="privacy.html">Политика конфиденциальности</a></li>
-							<li> <a href="orders.html">Мои заказы</a></li>
-							<li> <a href="current-order.html">Текущий заказ</a></li>
-							<li><a href="completed-order.html">Заказ выполнен</a></li>
-							<li> <a href="cancelled-order.html">Заказ отменен</a></li>
-							<li> <a href="deposit.html">Депозит</a></li>
-							<li> <a href="bankcards.html">Банковские карты</a></li>
-							<li> <a href="bankcard.html">Одна карта</a></li>
-							<li> <a href="addresses.html">Мои адреса</a></li>
-						</ul>
+						<!-- backtitle-->
+						<div class="backtitle"><a class="backtitle__arrow" href="home.html"> 
+								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+								</svg></a>
+							<h1 class="backtitle__text">Привязанные карты</h1><a class="backtitle__cross" href="home.html"> </a>
+						</div>
+						<!--	/backtitle-->
+						<div class="addresses__cards">
+							<div class="row gy">
+								<div class="addresses__col"> <a class="addresses__card" href="bankcard.html"> 
+										<div class="addresses__title">Дом</div>
+										<div class="addresses__text"> 
+											<p>Меркурий Сити Тауэр, кв./офис 62, этаж 25, </p>
+											<p>Для охраны 62</p>
+										</div></a></div>
+								<div class="addresses__col"> <a class="addresses__card" href="bankcard.html"> 
+										<div class="addresses__title">Работа</div>
+										<div class="addresses__text"> 
+											<p>Меркурий Сити Тауэр, кв./офис 62, этаж 25, </p>
+											<p>Для охраны 62</p>
+										</div></a></div>
+							</div>
+						</div>
+						<div class="addresses__btn"> 
+							<div class="btn btn--black">Добавить карту</div>
+						</div>
 					</div>
 				</div>
-				<!--	/navpage-->
+				<!--	/addresses-->
 			</main>
 			<!-- footer-->
 			<footer class="footer">
