--- a/completed-order.html
+++ b/completed-order.html
@@ -244,6 +244,7 @@
 		</div>
 		<script src="js/libs/jquery.min.js"> </script>
 		<script src="js/libs/swiper-bundle.min.js"> </script>
+		<script src="js/libs/jquery.inputmask.min.js"> </script>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
