--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 							<li> <a href="bankcards.html">Банковские карты</a></li>
 							<li> <a href="bankcard.html">Одна карта</a></li>
 							<li> <a href="addresses.html">Мои адреса</a></li>
+							<li><a href="address.html">Один дрес</a></li>
 						</ul>
 					</div>
 				</div>
