--- a/addresses.html
+++ b/addresses.html
@@ -120,13 +120,13 @@
 						<!--	/backtitle-->
 						<div class="addresses__cards">
 							<div class="row gy">
-								<div class="addresses__col"> <a class="addresses__card" href="bankcard.html"> 
+								<div class="addresses__col"> <a class="addresses__card" href="address.html"> 
 										<div class="addresses__title">Дом</div>
 										<div class="addresses__text"> 
 											<p>Меркурий Сити Тауэр, кв./офис 62, этаж 25, </p>
 											<p>Для охраны 62</p>
 										</div></a></div>
-								<div class="addresses__col"> <a class="addresses__card" href="bankcard.html"> 
+								<div class="addresses__col"> <a class="addresses__card" href="address.html"> 
 										<div class="addresses__title">Работа</div>
 										<div class="addresses__text"> 
 											<p>Меркурий Сити Тауэр, кв./офис 62, этаж 25, </p>
