--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 							<li> <a href="information.html">Мои данные</a></li>
 							<li> <a href="cart.html">Корзина</a></li>
 							<li> <a href="order.html">Оформление заказа</a></li>
+							<li> <a href="modals.html">Главная (модалки)</a></li>
 						</ul>
 					</div>
 				</div>
