--- a/modals.html
+++ b/modals.html
@@ -2702,7 +2702,7 @@
 						<div class="modal__input"> 
 							<div class="input"> 
 								<div class="input__input"> 
-									<input class="js-phone-code" type="text">
+									<input class="js-phone-code" type="text" placeholder="0 0 0 0">
 								</div>
 							</div>
 						</div>
@@ -2729,7 +2729,7 @@
 						<div class="modal__input"> 
 							<div class="input"> 
 								<div class="input__input"> 
-									<input class="js-phone-code" type="text">
+									<input class="js-phone-code" type="text" placeholder="0 0 0 0">
 								</div>
 							</div>
 						</div>
