--- a/home.html
+++ b/home.html
@@ -186,7 +186,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -235,7 +235,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -283,7 +283,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -331,7 +331,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -379,7 +379,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -427,7 +427,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -485,7 +485,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -534,7 +534,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -582,7 +582,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -630,7 +630,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -678,7 +678,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -726,7 +726,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -784,7 +784,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -833,7 +833,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -881,7 +881,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -929,7 +929,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -977,7 +977,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1025,7 +1025,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1083,7 +1083,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1132,7 +1132,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1180,7 +1180,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1228,7 +1228,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1276,7 +1276,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1324,7 +1324,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1382,7 +1382,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1431,7 +1431,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1479,7 +1479,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1527,7 +1527,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1575,7 +1575,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1623,7 +1623,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1681,7 +1681,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1730,7 +1730,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1778,7 +1778,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1826,7 +1826,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1874,7 +1874,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -1922,7 +1922,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -1980,7 +1980,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -2029,7 +2029,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2077,7 +2077,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2125,7 +2125,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2173,7 +2173,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2221,7 +2221,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -2279,7 +2279,7 @@
 						<div class="row gy">
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
@@ -2328,7 +2328,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2376,7 +2376,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2424,7 +2424,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2472,7 +2472,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 											</div>
 											<div class="card__content"> 
@@ -2520,7 +2520,7 @@
 							</div>
 							<div class="catalog__col"> 
 										<!-- card-->
-										<div class="card">
+										<div class="card modal-trigger" data-modal="#modalProduct">
 											<div class="card__img"> <img src="img/food.png" alt="">
 												<div class="card__pepper"> <img src="img/pepper.svg" alt=""></div>
 											</div>
